--- a/prover/cli_task1_single_shot_t5-large-gpu.yaml
+++ b/prover/cli_task1_single_shot_t5-large-gpu.yaml
@@ -15,7 +15,7 @@ model:
   max_num_steps: 20
   lr: 5e-4
   warmup_steps: 500
-  model_name: t5-large
+  model_name: google/t5-base-lm-adapt
   num_beams: 10
   topk: 10
   verifier_ckpt: null
@@ -29,7 +29,7 @@ data:
   subtree_proved_prob: 0.75
   subtree_proved_all_or_none: true
   batch_size: 1
-  num_workers: 1
+  num_workers: 2
   max_input_len: 400
   max_output_len: 600
   path_train: ../data/entailment_trees_emnlp2021_data_v3/dataset/task_1/train.jsonl
