--- a/prover/cli_task2_stepwise_t5-large.yaml
+++ b/prover/cli_task2_stepwise_t5-large.yaml
@@ -23,6 +23,9 @@ model:
   proof_search: false
   oracle_prover: false
   oracle_verifier: false
+  diverse_beam_search: false 
+  diversity_penalty: 5.0
+  num_beam_groups: 5
 data:
   dataset: entailmentbank
   sample_goal: intermediates # hypothesis | intermediates
